--- a/content/posts/2024.07.09-minideck.md
+++ b/content/posts/2024.07.09-minideck.md
@@ -46,7 +46,7 @@ In `typst`, laying stuff out works with the box model just like in HTML, and it 
 
             Text will never give you up.
         ],
-        image("./assets/rick-asley.gif")
+        image("./assets/dQw4w9WgXcQ.gif")
     )
 ]
 ```
